refactor(ansible): Move superset roles in deep hierarchy
UIC-584

--- a/ansible/roles/superset/superset/templates/superset-deployment.yaml.j2
+++ b/ansible/roles/superset/superset/templates/superset-deployment.yaml.j2
@@ -33,7 +33,7 @@ spec:
           value: {{ superset_postgres_db_user }}
         - name: REDIS_HOST
           value: redis
-        - name: REDIS_PORTkubectl 
+        - name: REDIS_PORT
           value: "6379"
         - name: SUPERSET_ENV
           value: local
