feat(ansible): Removed Volume mound from ansible for superset
* feat(ansible): Removed Volume mound from ansible for superset
* refactor(ansible): changed superset host port to 8888 from 8088 due to yarn java using 8088 port on nn1 and nn2

UIC-640

--- a/ansible/roles/superset/superset/templates/superset-deployment.yaml.j2
+++ b/ansible/roles/superset/superset/templates/superset-deployment.yaml.j2
@@ -43,14 +43,7 @@ spec:
         - containerPort: 8088
           hostPort: {{ superset_host_port }}
         resources: {}
-        volumeMounts:
-        - mountPath: /home/work/incubator-superset/superset/assets/node_modules
-          name: superset-node-modules-storage
       restartPolicy: {{ superset_docker_restart_policy }}
       nodeSelector:
-        management-nodes: "true"
-      volumes:
-      - name: superset-node-modules-storage
-        persistentVolumeClaim:
-          claimName: superset-node-modules-volume-claim
+        master-nodes: "true"
 status: {}
