feat(header):  add guavus header footer theme support
* feat(header):  add guavus header footer theme support

add guavus header and footer theme support
add learning docs

UIC-643

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -1,5 +1,6 @@
 @import './less/index.less';
 @import "./less/cosmo/variables.less";
+@import "./guavus.less";
 
 body {
     margin: 0px !important;
