--- a/superset/templates/appbuilder/navbar.html
+++ b/superset/templates/appbuilder/navbar.html
@@ -11,12 +11,19 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/superset/profile/{{ current_user.username }}/">
-        <img
-          width="126"
-          src="{{ appbuilder.app_icon }}"
-          alt="{{ appbuilder.app_name }}"
-        />
+        <div class="header-img-div">
+          <img
+            src="{{ appbuilder.app_icon }}"
+            alt="{{ appbuilder.app_name }}"
+          />
+    
+          <div class='header-divider-line'>
+              <span></span>
+          </div>
+          <span>{{ appbuilder.app_name }}</span>
+      </div>
       </a>
+      
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
