--- a/superset/templates/superset/basic.html
+++ b/superset/templates/superset/basic.html
@@ -29,12 +29,9 @@
 
     {% endblock %}
 
-    {% for entry in get_unloaded_chunks(js_manifest('theme'), loaded_chunks) %}
-      <script src="{{ entry }}"></script>
-    {% endfor %}
-    {% for entry in get_unloaded_chunks(js_manifest('common'), loaded_chunks) %}
-      <script src="{{ entry }}"></script>
-    {% endfor %}
+    {% with filename="theme" %}
+      {% include "superset/partials/_script_tag.html" %}
+    {% endwith %}
 
     <input
       type="hidden"
@@ -78,11 +75,13 @@
       </div>
     </div>
     {% block tail_js %}
+      {% with filename="common" %}
+        {% include "superset/partials/_script_tag.html" %}
+      {% endwith %}
       {% if entry %}
-        {% set entry_files = js_manifest(entry) %}
-        {% for entry in get_unloaded_chunks(entry_files, loaded_chunks) %}
-          <script src="{{ entry }}"></script>
-        {% endfor %}
+        {% with filename=entry %}
+          {% include "superset/partials/_script_tag.html" %}
+        {% endwith %}
       {% endif %}
     {% endblock %}
   </body>
