--- a/superset/templates/superset/base.html
+++ b/superset/templates/superset/base.html
@@ -17,7 +17,7 @@
 
   {% block tail_js %}
     {{super()}}
-    {% with filename="common" %}
+    {% with filename="preamble" %}
       {% include "superset/partials/_script_tag.html" %}
     {% endwith %}
   {% endblock %}
