--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -51,8 +51,7 @@ input.form-control {
 
 .slice_description{
     padding: 8px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 5px 0;
     border: 1px solid #DDD;
     background-color: #F8F8F8;
     border-radius: 5px;
