--- a/superset/assets/stylesheets/less/cosmo/variables.less
+++ b/superset/assets/stylesheets/less/cosmo/variables.less
@@ -14,11 +14,11 @@
 @gray-light:             lighten(@gray-base, 70%);
 @gray-lighter:           lighten(@gray-base, 95%);
 
-@brand-primary:         #00A699;
-@brand-success:         #4AC15F;
-@brand-info:            lighten(#2AB7CA, 15%);
-@brand-warning:         #FED766;
-@brand-danger:          #FE4A49;
+@brand-primary:         #3023ae;
+@brand-success:         #00bfc3;
+@brand-info:            #0096ff;
+@brand-warning:         #ffcc99;
+@brand-danger:          #ff7f01;
 
 //== Scaffolding
 //
@@ -41,9 +41,9 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  Helvetica, Arial;
+@font-family-sans-serif:  'Source Sans Pro', 'Roboto', sans-serif;
 
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+@font-family-serif:       'Source Sans Pro', 'Roboto', sans-serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
@@ -867,3 +867,8 @@
 @dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
+
+
+
+
+
