Border color change

--- a/superset/assets/stylesheets/less/cosmo/variables.less
+++ b/superset/assets/stylesheets/less/cosmo/variables.less
@@ -153,7 +153,7 @@
 @btn-default-border:             @gray-light;
 
 @btn-success-color:              @btn-primary-color;
-@btn-success-bg:                 @brand-success;
+@btn-success-bg:                 @brand-primary;
 @btn-success-border:             @btn-success-bg;
 
 @btn-info-color:                 @btn-primary-color;
@@ -867,8 +867,4 @@
 @dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
-
-
-
-
 
