Input, select box theme change

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -2,11 +2,11 @@
 @import "./less/cosmo/variables.less";
 
 body {
-    margin: 0px !important;
+  margin: 0px !important;
 }
 
 .caret {
-    border-top: 4px solid;
+  border-top: 4px solid;
 }
 
 .emph {
@@ -14,11 +14,11 @@ body {
 }
 
 .alert.alert-danger > .debugger {
-    color: red;
+  color: red;
 }
 
 .modal-dialog {
-    z-index: 1100;
+  z-index: 1100;
 }
 
 .modal-header{
@@ -31,58 +31,58 @@ body {
   opacity: 0.9;
 }
 .label {
-    font-size: 100%;
+  font-size: 100%;
 }
 
 .no-wrap {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 input.form-control {
-    background-color: white;
+  background-color: white;
 }
 
 .chart-header a.danger {
-    color: red;
+  color: red;
 }
 
 .disabledButton {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .col-left-fixed {
-    width:350px;
-    position: absolute;
-    float: left;
+  width:350px;
+  position: absolute;
+  float: left;
 }
 .col-offset {
-    margin-left: 365px;
+  margin-left: 365px;
 }
 
 .slice_description{
-    padding: 8px;
-    margin: 5px;
-    border: 1px solid #DDD;
-    background-color: #F8F8F8;
-    border-radius: 5px;
-    font-size: 12px;
+  padding: 8px;
+  margin: 5px;
+  border: 1px solid #DDD;
+  background-color: #F8F8F8;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .slice_info{
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .padded {
-    padding: 10px;
+  padding: 10px;
 }
 
 .intable-longtext{
-    max-height: 200px;
-    overflow: auto;
+  max-height: 200px;
+  overflow: auto;
 }
 
 .container-fluid {
-    text-align: left;
+  text-align: left;
 }
 input[type="checkbox"] {
   display: inline-block;
@@ -91,49 +91,49 @@ input[type="checkbox"] {
 }
 
 .widget-is-cached {
-    display: none;
+  display: none;
 }
 
 .header span.label {
-    margin-left: 5px;
-    margin-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #timer {
-    width: 80px;
-    text-align: right;
+  width: 80px;
+  text-align: right;
 }
 
 .notbtn {
-    cursor: default;
-    box-shadow: none;
-    border: 1px solid #ccc;
+  cursor: default;
+  box-shadow: none;
+  border: 1px solid #ccc;
 }
 
 hr {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 span.title-block {
-    background-color: #EEE;
-    border-radius: 4px;
-    padding: 6px 12px;
-    margin: 0px 10px;
-    font-size: 20px;
+  background-color: #EEE;
+  border-radius: 4px;
+  padding: 6px 12px;
+  margin: 0px 10px;
+  font-size: 20px;
 }
 
 .nvtooltip {
-    z-index: 888;
-    transition: opacity 0ms linear;
-    -moz-transition: opacity 0ms linear;
-    -webkit-transition: opacity 0ms linear;
-    transition-delay: 0ms;
-    -moz-transition-delay: 0ms;
-    -webkit-transition-delay: 0ms;
+  z-index: 888;
+  transition: opacity 0ms linear;
+  -moz-transition: opacity 0ms linear;
+  -webkit-transition: opacity 0ms linear;
+  transition-delay: 0ms;
+  -moz-transition-delay: 0ms;
+  -webkit-transition-delay: 0ms;
 }
 .nvtooltip table td{
-    font-size: 11px !important;
+  font-size: 11px !important;
 }
 div.navbar {
   z-index: 999;
@@ -154,13 +154,13 @@ img.loading {
   margin: 10px;
 }
 img.viz-thumb-option {
-    width: 100px;
-    border: 1px solid gray;
-    margin-right: 5px;
-    border-radius: 5px;
+  width: 100px;
+  border: 1px solid gray;
+  margin-right: 5px;
+  border-radius: 5px;
 }
 .select2-drop.bigdrop .select2-results {
-    max-height: 700px;
+  max-height: 700px;
 }
 
 
@@ -214,21 +214,21 @@ div.widget {
 }
 
 .navbar .alert {
-    padding: 5px 10px;
-    margin-top: 8px;
-    margin-bottom: 0;
+  padding: 5px 10px;
+  margin-top: 8px;
+  margin-bottom: 0;
 }
 
 .table-condensed {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .table-condensed input[type="checkbox"] {
-    float: left;
+  float: left;
 }
 
 table.table-no-hover tr:hover {
-    background-color: initial;
+  background-color: initial;
 }
 
 .editable-title input {
@@ -277,104 +277,104 @@ table.table-no-hover tr:hover {
   margin-top: 10px;
 }
 .m-b-10 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 .m-l-5 {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 .m-l-10 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 .m-l-25 {
-    margin-left: 25px;
+  margin-left: 25px;
 }
 .Select-menu-outer {
-    z-index: 10 !important;
+  z-index: 10 !important;
 }
 
 /** not found record **/
 .panel b {
-    display: inline-block;
-    width: 98%;
-    padding: 2rem;
-    margin: 0 1% 20px 1%;
-    background: #f8f8f8;
+  display: inline-block;
+  width: 98%;
+  padding: 2rem;
+  margin: 0 1% 20px 1%;
+  background: #f8f8f8;
 }
 
 /** table on both sides of the gap **/
 .panel .table-responsive{
-    padding: 0 1%;
+  padding: 0 1%;
 }
 @media screen and (max-width: 767px) {
-    .panel .table-responsive{
-        width: 98%;
-    }
+  .panel .table-responsive{
+    width: 98%;
+  }
 }
 
 .list-container {
-    position: relative;
+  position: relative;
 }
 
 .list-search-container {
-    position: relative;
+  position: relative;
 }
 
 .list-search-container .dropdown-toggle {
-    position: absolute;
-    top: -43px;
-    right: 25px;
-    border: 0;
-    padding: 0 18px;
+  position: absolute;
+  top: -43px;
+  right: 25px;
+  border: 0;
+  padding: 0 18px;
 }
 
 .list-search-container .fa-filter {
-    position: relative;
-    left: -8px;
+  position: relative;
+  left: -8px;
 }
 
 .list-search-container .dropdown-menu {
-    top: -19px;
-    right: 0;
-    left: auto;
-    float: none;
+  top: -19px;
+  right: 0;
+  left: auto;
+  float: none;
 }
 
 .list-container .pagination-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
 }
 .list-container .pagination-container .pagination {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 .list-container .pagination-container strong {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .list-container .list-add-action {
-    position: absolute;
-    top: -30px;
-    right: 15px;
+  position: absolute;
+  top: -30px;
+  right: 15px;
 }
 
 .list-container .form-actions-container {
-    padding: 0  0 20px 10px;
-    display: inline;
+  padding: 0  0 20px 10px;
+  display: inline;
 }
 
 .list-container .filter-action {
-    margin: 10px 10px 0 10px;
-    padding-bottom: 15px;
+  margin: 10px 10px 0 10px;
+  padding-bottom: 15px;
 }
 
 .list-container .filters-container table tr:first-child td {
-    border-top: none;
+  border-top: none;
 }
 .list-container .filters-container table tr:last-child td {
-    border-bottom: 1px solid #b3b3b3;
+  border-bottom: 1px solid #b3b3b3;
 }
 
 .list-add-action .btn.btn-sm {
@@ -386,11 +386,11 @@ table.table-no-hover tr:hover {
 }
 
 iframe {
-    border: none;
-    width: 100%;
+  border: none;
+  width: 100%;
 }
 .text-transparent {
-    color: transparent;
+  color: transparent;
 }
 
 .dimmed {
@@ -427,28 +427,28 @@ g.annotation-container {
   stroke: @brand-primary;
 }
 .reactable-header-sortable{
-    position:relative;
-    padding-right: 40px;
+  position:relative;
+  padding-right: 40px;
 }
 
 .reactable-header-sortable::before{
-    font: normal normal normal 14px/1 FontAwesome;
-    content: "\f0dc";
-    position: absolute;
-    top: 6px;
-    right: 5px;
-    color: @brand-primary;
+  font: normal normal normal 14px/1 FontAwesome;
+  content: "\f0dc";
+  position: absolute;
+  top: 6px;
+  right: 5px;
+  color: @brand-primary;
 }
 .reactable-header-sort-asc::before{
-    content: "\f0de";
-    color: @brand-primary;
+  content: "\f0de";
+  color: @brand-primary;
 }
 .reactable-header-sort-desc::before{
-    content: "\f0dd";
-    color: @brand-primary;
+  content: "\f0dd";
+  color: @brand-primary;
 }
 tr.reactable-column-header th.reactable-header-sortable {
-    padding-right: 17px;
+  padding-right: 17px;
 }
 
 .explore-chart-overlay {
@@ -517,3 +517,14 @@ button:focus {
   border: none;
 }
 
+input, .form-control input, .form-control input:hover, .form-control input:focus, .form-control, .form-control:hover, .form-control:focus{
+  box-shadow: none;
+  outline: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+input[type=file]{
+  border:none;
+}
