Some options removal in main menu

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -528,3 +528,13 @@ input, .form-control input, .form-control input:hover, .form-control input:focus
 input[type=file]{
   border:none;
 }
+
+.navbar{
+  background: #cccccc57;
+  margin: 0;
+  border: none;
+}
+
+.navbar .nav > li:first-child, .navbar .nav > li:lastchild{
+  display: none;
+}
