Last option removal in menu

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -535,6 +535,6 @@ input[type=file]{
   border: none;
 }
 
-.navbar .nav > li:first-child, .navbar .nav > li:lastchild{
+.navbar .nav > li:first-child, .navbar .nav > li:last-child{
   display: none;
 }
