Removing druid option & signin page ui fix

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -538,3 +538,7 @@ input[type=file]{
 .navbar .nav > li:first-child, .navbar .nav > li:last-child{
   display: none;
 }
+
+form input, form select{
+  border: 1px solid #ccc!important;
+}
