Added edit page Modified list view browsing

--- a/superset/templates/superset/add_alert.html
+++ b/superset/templates/superset/add_alert.html
@@ -8,6 +8,7 @@
   <div
     id="js-add-alert-container"
     data-bootstrap="{{ bootstrap_data }}"
+    data-alert="{{ alert_data }}"
   ></div>
 {% endblock %}
 
