Add link to report a bug to navbar
(cherry picked from commit f127e89c51e745f772cf76a9badd21ece11a032d)
(cherry picked from commit 189f5d8d2c1afaff661c8b35af4691ef31236900)
(cherry picked from commit a288b8405c17ab7cb05ed80a4109384b4ac12ed4)

--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -1,4 +1,12 @@
-
+<li>
+  <a
+    tabindex="-1"
+    href="https://jira.lyft.net/secure/CreateIssueDetails!init.jspa?pid=18701&issuetype=1"
+    title="Report a bug"
+  >
+    <i class="fa fa-bug"></i>&nbsp;
+  </a>
+</li>
 {% set locale = session['locale'] %}
 {% if not locale %}
     {% set locale = 'en' %}
@@ -24,7 +32,6 @@
     </ul>
 </li>
 {% endif %}
-
 
 
 {% if not current_user.is_anonymous %}
