fix(namespace): added guavus namespace (#26)
UIC-721

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-service.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-service.yaml.j2
@@ -5,6 +5,7 @@ metadata:
   labels:
     service: superset
   name: superset
+  namespace: {{ superset_kube_namespace }}
 spec:
   ports:
   - name: "8088"
