--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -5,6 +5,7 @@ metadata:
   labels:
     service: superset
   name: superset
+  namespace: {{ superset_kube_namespace }}
 spec:
   replicas: 1
   strategy:
