Feature/map click unclick and tooltip support (#32)
* feat(leafletmap): make chart-header dropdown menu above map dropdown

make chart-header dropdown menu above map dropdown

UIC-766

* feat(leafletmap): add layer highlight on click and  deselect functionality

add layer highlight on click and  deselect functionality

UIC-814

* feat(leafletmap): add _path check

add _path check

UIC-814

* feat(leafletmap): add tooltip support (#33)

* feat(leafletmap): add tooltip support

add tooltip support with configurable columns and options

UIC-791

--- a/superset/assets/src/dashboard/stylesheets/components/chart.less
+++ b/superset/assets/src/dashboard/stylesheets/components/chart.less
@@ -91,6 +91,11 @@
   }
 }
 
+// make dropdown popup above leaflet control 
+.slice-header-dropdown-menu{
+  z-index: 1001 !important;
+}
+
 .dot {
   height: 4px;
   width: 4px;
