--- a/superset/assets/src/dashboard/stylesheets/dashboard.less
+++ b/superset/assets/src/dashboard/stylesheets/dashboard.less
@@ -189,6 +189,11 @@ body {
     position: relative;
     margin-left: 8px;
   }
+
+  .publish {
+    position: relative;
+    margin-left: 8px;
+  }
 }
 
 .ace_gutter {
