Kerberos access support in Superset (#36)
* feat(kerberos-support): Added kerberos support on superset

Added required libs to enable krb5 client on superset
changes in ansible scripts to dynamically enable krb5 support on superset

UIC-811

* feat(kerberos-support): fixed path issues for customer and default

UIC-811

* feat(kerberos-support): added validation to check if kerberos ticket is valid

UIC-811

* feat(kerberos-support): fixed permission issues

UIC-811

* chore(*): fixed yarn package

UIC-811

* chore(*): added method comment

UIC-811

* feat(kerberos-support): corrected docker file

UIC-811

* feat(kerberos-support): remove redundant packages from pipfile

UIC-811

* feat(kerberos-support): updated setup.py

UIC-811

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -38,13 +38,34 @@ spec:
           value: "6379"
         - name: SUPERSET_ENV
           value: local
+        - name: IS_KERBEROS_ENABLED
+          value: "{{ superset_kerberos_enabled }}"
         image: {{ superset_docker_image_name }}:{{ superset_image_tag }}
         name: superset
         ports:
         - containerPort: 8088
           hostPort: {{ superset_host_port }}
         resources: {}
+        volumeMounts:
+         - name: superset-configmap-volume
+           mountPath: /usr/local/bin/auth-kerberized.sh
+           subPath: auth-kerberized.sh
+         - name: krb5-keytab-config-path
+           mountPath: /etc/security/keytabs/{{ superset_hive_keytab_name }}
+         - name: krb5-config-path
+           mountPath: /etc/{{ superset_krb5_conf_name }}
       restartPolicy: {{ superset_docker_restart_policy }}
+      volumes:
+        - name: superset-configmap-volume
+          configMap:
+            name: superset-configmap
+            defaultMode: 0755
+        - name: krb5-keytab-config-path
+          hostPath:
+            path: {{ superset_kerberos_config_dir }}/{{ superset_hive_keytab_name }}
+        - name: krb5-config-path
+          hostPath:
+            path: {{ superset_kerberos_config_dir }}/{{ superset_krb5_conf_name }}  
       nodeSelector:
         master-nodes: "true"
 status: {}
