UIC-790: Add cell site  with direction support in map (#39)
* UIC-790: replace circleMarker with graphIcon marker

* UIC-790: draw direction hexagon

* UIC-790: code refactor + click on hexagon

* UIC-790: marker value + highlighted hexagon

* UIC-790: refactor code (review comments)

* UIC-790: rename function

* UIC-790: null check for makrerValue

--- a/superset/assets/src/visualizations/leaflet_map.css
+++ b/superset/assets/src/visualizations/leaflet_map.css
@@ -5,10 +5,12 @@
 .active-layer{
     stroke-width:5 !important;
 }
-
-/** 
+.active-layer-canvas{
+  border: 1px solid red;
+}
+/**
  remove close button from tooltip
-*/ 
+*/
 .leaflet-popup-close-button{
   display: none;
 }
